--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/http": "^5.10.0",
     "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/sqlite": "^5.10.0",
+    "@ionic-native/sqlite-porter": "^5.10.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "@ionic/lab": "^2.0.6",
@@ -35,9 +37,11 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^3.2.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.1.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -79,7 +83,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
-      }
+      },
+      "uk.co.workingedge.cordova.plugin.sqliteporter": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
